[package]
name = "k8s-controller"
version = "0.1.0"
authors = ["Daniel Bevenius <daniel.bevenius@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = "0.14.0"
serde = "1.0.102"
serde_derive = "1.0.102"
serde_json = "1.0"
chrono = { version = "0.4.9", features = ["serde"] }
